<resources>
    <string name="app_name">Setting</string>


    <string name="mine_protocol">
    \n深圳市旅联网络科技有限公司（以下简称“麋鹿旅行”）在此特别提醒您（向导或游客）在注册成为用户之前，请认真阅读本《用户协议》（以下简称“协议”），确保您充分理解本协议中各条款。请您审慎阅读并选择接受或不接受本协议。除非您接受本协议所有条款，否则您无权注册、登录或使用本协议所涉服务。您的注册、登录、使用等行为将视为对本协议的接受，并同意接受本协议各项条款的约束。
    \n本协议约定麋鹿旅行与用户之间关于“麋鹿旅行”软件服务（以下简称“服务”）的权利义务。“用户”是指注册、登录、使用本服务的个人（向导或游客）。本协议可由麋鹿旅行随时更新，更新后的协议条款一旦公布即代替原来的协议条款，恕不再另行通知，用户可在本网站查阅最新版协议条款。在麋鹿旅行修改协议条款后，如果用户不接受修改后的条款，请立即停止使用麋鹿旅行提供的服务，用户继续使用麋鹿旅行提供的服务将被视为接受修改后的协议。
    \n一、账号注册
    \n1.1 用户在使用本服务前需要注册一个“麋鹿旅行”账号。“麋鹿旅行”账号应当使用手机号码绑定注册，请用户使用尚未与"麋鹿旅行"账号绑定的手机号码，以及未被麋鹿旅行根据本协议封禁的手机号码注册“麋鹿旅行”账号。麋鹿旅行可以根据用户需求或产品需要对账号注册和绑定的方式进行变更，而无须事先通知用户。
    \n1.2 “麋鹿旅行”系基于地理位置的以移动互联网、大数据、云服务为基础,专门为中国各地闲散旅游资源、本地化向导服务、喜欢自由行的旅行者推出的一款生活旅游类手机APP软件,致力于为旅行者带来更加简单、便捷、舒适的、自由行旅游。用户注册时应当授权麋鹿旅行公开及使用其地理位置信息方可成功注册“麋鹿旅行”账号。故用户完成注册即表明用户同意麋鹿旅行公开及使用用户的地理位置信息。如用户需要终止向其他用户公开其地理位置信息，可自行设置为隐身状态。
    \n1.3 鉴于“麋鹿旅行”账号的绑定注册方式，您同意麋鹿旅行在注册时将使用您提供的手机号码及/或自动提取您的手机号码及自动提取您的手机设备识别码等信息用于注册。
    \n1.4 在用户注册及使用本服务时，麋鹿旅行需要搜集能识别用户身份的个人信息以便麋鹿旅行可以在必要时联系用户，或为用户提供更好的使用体验。麋鹿旅行搜集的信息包括但不限于用户的姓名、性别、年龄、出生日期、身份证号、地址、个人说明等；麋鹿旅行同意对这些信息的使用将受限于第三条用户个人隐私信息保护的约束。
    \n二、服务内容
    \n2.1 本服务的具体内容由“麋鹿旅行”根据实际情况提供，包括但不限于:
    \n(1)发布旅行中的游记、上传图片；
    \n(2)预订向导或注册成为平台向导；
    \n(3)发布并分享对向导，景区景点，美食，民宿，购物、特产，游记文章、话题、图片的评论；
    \n(4)其他与旅游相关服务。
    \n“麋鹿旅行”可以对其提供的服务予以变更，且“麋鹿旅行”提供的服务内容可能随时变更；用户将会收到麋鹿旅行关于服务变更的通知。
    \n2.2 “麋鹿旅行”会不定期通过促销活动发送优惠券、积分或虚拟货币等进行奖励或兑换真实物品,该促销活动的最终解释权归“麋鹿旅行”所有。
    \n2.3 “麋鹿旅行”提供的服务包含免费服务与收费服务。
    \n(1)用户可以体验的免费服务有：
    \n(2)用户可以通过付费方式购买收费服务，具体方式为：用户通过支付宝、微信或其他“麋鹿旅行”平台提供的付费途径支付一定数额的人民币购买“麋鹿旅行”平台的其它增值功能服务，然后根据麋鹿旅行公布的资费标准以人民币购买用户欲使用的收费服务，从而获得收费服务使用权限。对于收费服务，麋鹿旅行会在用户使用之前给予用户明确的提示，只有用户根据提示确认其同意按照前述支付方式支付费用并完成了支付行为，用户才能使用该等收费服务。
    \n(3)收费标准：
    \n三、用户个人隐私信息保护
    \n3.1 用户在注册账号或使用本服务的过程中，可能需要填写或提交一些必要的信息，如法律法规、规章规范性文件（以下称“法律法规”）规定的需要填写的身份信息。如用户提交的信息不完整或不符合法律法规的规定，则用户可能无法使用本服务或在使用本服务的过程中受到限制。
    \n3.2 个人隐私信息是指涉及用户个人身份或个人隐私的信息，比如，用户真实姓名、身份证号、手机号码、手机设备识别码、IP地址、用户聊天记录。非个人隐私信息是指用户对本服务的操作状态以及使用习惯等明确且客观反映在“麋鹿旅行”服务器端的基本记录信息、个人隐私信息范围外的其它普通信息，以及用户同意公开的上述隐私信息。
    \n3.3 尊重用户个人隐私信息的私有性是“麋鹿旅行”的一贯制度，“麋鹿旅行”将采取技术措施和其他必要措施，确保用户个人隐私信息安全，防止在本服务中收集的用户个人隐私信息泄露、毁损或丢失。在发生前述情形或者“麋鹿旅行”发现存在发生前述情形的可能时，将及时采取补救措施。
    \n3.4 “麋鹿旅行”未经用户同意不向任何第三方公开、 透露用户个人隐私信息。但以下特定情形除外：
    \n(1) “麋鹿旅行”根据法律法规规定或有权机关的指示提供用户的个人隐私信息；
    \n(2) 由于用户将其用户密码告知他人或与他人共享注册帐户与密码，由此导致的任何个人信息的泄漏，或其他非因原因导致“麋鹿旅行”的个人隐私信息的泄露；
    \n(3) 用户自行向第三方公开其个人隐私信息；
    \n(4) 用户与“麋鹿旅行”及合作单位之间就用户个人隐私信息的使用公开达成约定，“麋鹿旅行”因此向合作单位公开用户个人隐私信息；
    \n3.5 用户同意“麋鹿旅行”可在以下事项中使用用户的个人隐私信息：
    \n(1) “麋鹿旅行”向用户及时发送重要通知，如软件更新、本协议条款的变更；
    \n(2) “麋鹿旅行”内部进行审计、数据分析和研究等，以改进“麋鹿旅行”的产品、服务和与用户之间的沟通；
    \n(3) 依本协议约定，“麋鹿旅行”管理、审查用户信息及进行处理措施；
    \n(4) 适用法律法规规定的其他事项。
    \n除上述事项外，如未取得用户事先同意，“麋鹿旅行”不会将用户个人隐私信息使用于任何其他用途。
    \n3.6 用户确认，其地理位置信息为非个人隐私信息，用户成功注册“麋鹿旅行”账号视为确认授权麋鹿旅行提取、公开及使用用户的地理位置信息。用户地理位置信息将作为用户公开资料之一，由“麋鹿旅行”向其他用户公开。如用户需要终止向其他用户公开其地理位置信息，可随时自行设置为隐身状态。
    \n3.7 为了改善“麋鹿旅行”的技术和服务，向用户提供更好的服务体验，“麋鹿旅行”或可会自行收集使用或向第三方提供用户的非个人隐私信息。
    \n四、内容规范
    \n4.1 本条所述内容是指用户使用本服务过程中所制作、上载、复制、发布、传播的任何内容，包括但不限于账号头像、名称、用户说明等注册信息及认证资料，或文字、语音、图片、视频、图文等发送、回复或自动回复消息和相关链接页面，以及其他使用账号或本服务所产生的内容。
    \n4.2 用户不得利用“麋鹿旅行”账号或本服务制作、上载、复制、发布、传播如下法律、法规和政策禁止的内容：
    \n(1) 反对宪法所确定的基本原则的；
    \n(2) 危害国家安全，泄露国家秘密，颠覆国家政权，破坏国家统一的；
    \n(3) 损害国家荣誉和利益的；
    \n(4) 煽动民族仇恨、民族歧视，破坏民族团结的；
    \n(5) 破坏国家宗教政策，宣扬邪教和封建迷信的；
    \n(6) 散布谣言，扰乱社会秩序，破坏社会稳定的；
    \n(7) 散布淫秽、色情、赌博、暴力、凶杀、恐怖或者教唆犯罪的；
    \n(8) 侮辱或者诽谤他人，侵害他人合法权益的；
    \n(9) 不遵守法律法规底线、社会主义制度底线、国家利益底线、公民合法权益底线、社会公共秩序底线、道德风尚底线和信息真实性底线的"七条底线"要求的；
    \n(10) 含有法律、行政法规禁止的其他内容的信息。
    \n3、用户不得利用“麋鹿旅行”账号或本服务制作、上载、复制、发布、传播如下干扰“麋鹿旅行”正常运营，以及侵犯其他用户或第三方合法权益的内容：
    \n(1) 含有任何性或性暗示的；
    \n(2) 含有辱骂、恐吓、威胁内容的；
    \n(3) 含有骚扰、垃圾广告、恶意信息、诱骗信息的；
    \n(4) 涉及他人隐私、个人信息或资料的；
    \n(5) 侵害他人名誉权、肖像权、知识产权、商业秘密等合法权利的；
    \n(6) 含有其他干扰本服务正常运营和侵犯其他用户或第三方合法权益内容的信息。
    \n五、使用规则
    \n5.1 用户在本服务中或通过本服务所传送、发布的任何内容并不反映或代表，也不得被视为反映或代表“麋鹿旅行”的观点、立场或政策，“麋鹿旅行”对此不承担任何责任。
    \n5.2 用户不得利用“麋鹿旅行”账号或本服务进行如下行为：
    \n(1) 提交、发布虚假信息，或盗用他人头像或资料，冒充、利用他人名义的；
    \n(2) 强制、诱导其他用户关注、点击链接页面或分享信息的；
    \n(3) 虚构事实、隐瞒真相以误导、欺骗他人的；
    \n(4) 利用技术手段批量建立虚假账号的；
    \n(5) 利用“麋鹿旅行”账号或本服务从事任何违法犯罪活动的；
    \n(6) 制作、发布与以上行为相关的方法、工具，或对此类方法、工具进行运营或传播，无论这些行为是否为商业目的；
    \n(7) 其他违反法律法规规定、侵犯其他用户合法权益、干扰“麋鹿旅行”正常运营或“麋鹿旅行”未明示授权的行为。
    \n5.3 用户须对利用“麋鹿旅行”账号或本服务传送信息的真实性、合法性、无害性、准确性、有效性等全权负责，与用户所传播的信息相关的任何法律责任由用户自行承担，与“麋鹿旅行”无关。如因此给“麋鹿旅行”或第三方造成损害的，用户应当依法予以赔偿。
    \n5.4 “麋鹿旅行”提供的服务中可能包括广告，用户同意在使用过程中显示“麋鹿旅行”和第三方合作伙伴提供的广告。除法律法规明确规定外，用户应自行对依该广告信息进行的交易负责，对用户因依该广告信息进行的交易或前述广告商提供的内容而遭受的损失或损害，“麋鹿旅行”不承担任何责任。
    \n六、帐户管理
    \n6.1 “麋鹿旅行”账号的所有权归“麋鹿旅行”所有，用户完成申请注册手续后，获得“麋鹿旅行”账号的使用权，该使用权仅属于初始申请注册人，禁止赠与、借用、租用、转让或售卖。“麋鹿旅行”因经营需要，有权回收用户的“麋鹿旅行”账号。
    \n6.2 用户可以更改、删除“麋鹿旅行”帐户上的个人资料、注册信息及传送内容等，但需注意，删除有关信息的同时也会删除用户储存在系统中的文字和图片。用户需承担该风险。
    \n6.3 用户有责任妥善保管注册账号信息及账号密码的安全，因用户保管不善可能导致遭受盗号或密码失窃，责任由用户自行承担。用户需要对注册账号以及密码下的行为承担法律责任。用户同意在任何情况下不使用其他用户的账号或密码。在用户怀疑他人使用其账号或密码时，用户同意立即通知“麋鹿旅行”。
    \n6.4 用户应遵守本协议的各项条款，正确、适当地使用本服务，如因用户违反本协议中的任何条款，“麋鹿旅行”在通知用户后有权依据协议中断或终止对违约用户“麋鹿旅行”账号提供服务。同时“麋鹿旅行”保留在任何时候收回“麋鹿旅行”账号、用户名的权利。
    \n6.5 如用户注册“麋鹿旅行”账号后一年不登录，通知用户后，“麋鹿旅行”可以收回该账号，以免造成资源浪费，由此造成的不利后果由用户自行承担。
    \n七、数据储存
    \n7.1 “麋鹿旅行”不对用户在本服务中相关数据的删除或储存失败负责。
    \n7.2 “麋鹿旅行”可以根据实际情况自行决定用户在本服务中数据的最长储存期限，并在服务器上为其分配数据最大存储空间等。用户可根据自己的需要自行备份本服务中的相关数据。
    \n7.4 如用户停止使用本服务或本服务终止，“麋鹿旅行”可以从服务器上永久地删除用户的数据。本服务停止、终止后，“麋鹿旅行”没有义务向用户返还任何数据。
    \n八、风险承担
    \n8.1 用户理解并同意:“麋鹿旅行”仅为用户提供分享、传送及获取信息的平台，用户必须为自己注册账号下的一切行为负责，包括用户所传送的任何内容以及由此产生的任何后果。用户应对“麋鹿旅行”及本服务中的内容自行加以判断，并承担因使用内容而引起的所有风险，包括因对内容的正确性、完整性或实用性的依赖而产生的风险。“麋鹿旅行”无法且不会对因用户行为而导致的任何损失或损害承担责任。
    \n如果用户发现任何人违反本协议约定或以其他不当的方式使用本服务，请立即向“麋鹿旅行”举报或投诉，“麋鹿旅行”将依本协议约定进行处理。
    \n8.2 用户理解并同意：因业务发展需要，麋鹿旅行保留单方面对本服务的全部或部分服务内容变更、暂停、终止或撤销的权利，用户需承担此风险。
    \n九、知识产权声明
    \n9.1 除本服务中涉及广告的知识产权由相应广告商享有外，“麋鹿旅行”在本服务中提供的内容（包括但不限于网页、文字、图片、音频、视频、图表等）的知识产权均归“麋鹿旅行”所有，但用户在使用本服务前对自己发布的内容已合法取得知识产权的除外。
    \n9.2 除另有特别声明外，“麋鹿旅行”提供本服务时所依托软件的著作权、专利权及其他知识产权均归“麋鹿旅行”所有。
    \n9.3 “麋鹿旅行”在本服务中所涉及的图形、文字或其组成，以及其他“麋鹿旅行”标志及产品、服务名称（以下统称“麋鹿旅行标识”），其著作权或商标权归“麋鹿旅行”所有。未经“麋鹿旅行”事先书面同意，用户不得将“麋鹿旅行标识”以任何方式展示、使用或作其他处理，也不得向他人表明用户有权展示、使用、或其他有权处理“麋鹿旅行标识”的意思。
    \n9.4 上述及其他任何“麋鹿旅行”或相关广告商依法拥有的知识产权均受到法律保护，未经“麋鹿旅行”或相关广告商书面许可，用户不得以任何形式进行使用或创作相关衍生作品。
    \n十、法律责任
    \n10.1 如果“麋鹿旅行”发现或收到他人举报（或投诉）用户违反本协议约定的，“麋鹿旅行”有权不经通知随时对相关内容，包括但不限于用户资料、聊天记录进行审查、删除，并视情节轻重对违规账号处以包括但不限于警告、账号封禁 、设备封禁 、功能封禁 的处罚，且通知用户处理结果。
    \n10.2 因违反用户协议被封禁的用户，可以自行到APP用户端管理中心查询封禁期限，并在封禁期限届满后自助解封。其中，被实施功能封禁的用户会在封禁期届满后自动恢复被封禁功能。被封禁用户可向“麋鹿旅行”客服电话提交申诉，麋鹿旅行将对申诉进行审查，并自行合理判断决定是否变更处罚措施。
    \n10.3 用户理解并同意，麋鹿旅行有权依合理判断对违反有关法律法规或本协议规定的行为进行处罚，对违法违规的任何用户采取适当的法律行动，并依据法律法规保存有关信息向有关部门报告等，用户应承担由此而产生的一切法律责任。
    \n10.4 用户理解并同意：因用户违反本协议约定导致或产生的任何第三方向“麋鹿旅行”主张的任何索赔、要求或损失（包括合理的律师费等维权成本），用户应当赔偿“麋鹿旅行”，并使之免受损害。
    \n十一、免责条款
    \n11.1 用户理解并确认：在使用本服务的过程中，可能会遇到不可抗力等风险因素，使本服务发生中断。不可抗力是指不能预见、不能克服并不能避免且对一方或双方造成重大影响的客观事件，包括但不限于自然灾害（如洪水、地震、瘟疫流行和风暴等）以及社会事件（如战争、动乱、政府行为等）。出现上述情况时，“麋鹿旅行”将努力在第一时间与相关单位配合，及时进行修复，但是由此给用户或第三方造成的损失，“麋鹿旅行”及合作单位在法律允许的范围内免责。
    \n11.2 本服务同大多数互联网服务一样，受包括但不限于用户原因、网络服务质量、社会环境等因素的差异影响，可能受到各种安全问题的侵扰，如他人利用用户的资料造成现实生活中的骚扰；用户下载安装的其它软件或访问的其他网站中含有"木马"等病毒，威胁到用户的计算机信息和数据的安全，继而影响本服务的正常使用等等。用户应加强信息安全及使用者资料的保护意识，要注意加强密码保护，以免遭致损失和骚扰。
    \n11.3 用户理解并确认：本服务存在因不可抗力、计算机病毒或黑客攻击、系统不稳定、用户所在位置、用户关机以及其他任何技术、互联网络、通信线路原因等造成的服务中断或不能满足用户要求的风险，因此导致用户或第三方任何损失的，“麋鹿旅行”不承担任何责任。
    \n11.4 用户理解并确认：在使用本服务过程中存在来自任何他人的包括误导性的、欺骗性的、威胁性的、诽谤性的、令人反感的或非法的信息，或侵犯他人权利的匿名或冒名的信息，以及伴随该等信息的行为，因此导致的用户或第三方的任何损失，“麋鹿旅行”不承担任何责任。
    \n11.5 用户理解并确认：“麋鹿旅行”需要定期或不定期地对“麋鹿旅行”平台或相关的设备进行检修或者维护，如因此类情况而造成服务在合理时间内的中断，“麋鹿旅行”无需为此承担任何责任，但“麋鹿旅行”应事先进行通告。
    \n11.6 “麋鹿旅行”依据法律法规、本协议约定获得处理违法违规或违约内容的权利，该权利不构成“麋鹿旅行”的义务或承诺，“麋鹿旅行”不能保证及时发现违法违规或违约行为或进行相应处理。
    \n11.7 用户理解并确认：对于“麋鹿旅行”向用户提供的下列产品或者服务的质量缺陷及其引发的任何损失，“麋鹿旅行”无需承担任何责任：
    \n(1)“麋鹿旅行”向用户免费提供的服务；
    \n(2)“麋鹿旅行”向用户赠送的任何产品或者服务。
    \n11.8 在任何情况下，“麋鹿旅行”均不对任何间接性、后果性、惩罚性、偶然性、特殊性或刑罚性的损害（包括因用户使用“麋鹿旅行”或本服务而遭受的利润损失）承担责任（即使“麋鹿旅行”已被告知该等损失的可能性亦然）。尽管本协议中可能含有相悖的规定，“麋鹿旅行”对用户承担的全部责任，无论因何原因或何种行为方式，始终不超过用户因使用“麋鹿旅行”提供的服务而支付给“麋鹿旅行”的费用(如有)。
    \n十二、服务的变更、中断、终止
    \n12.1 鉴于网络服务的特殊性，用户同意“麋鹿旅行”有权随时变更、中断或终止部分或全部的服务（包括收费服务）。“麋鹿旅行”变更、中断或终止的服务，“麋鹿旅行”应当在变更、中断或终止之前通知用户，并应向受影响的用户提供等值的替代性的服务；如用户不愿意接受替代性的服务，如果该用户已经向“麋鹿旅行”支付了服务费，“麋鹿旅行”应当按照该用户实际使用服务的情况扣除相应服务费之后将剩余的服务费退还用户的“麋鹿旅行”钱包账户中。
    \n12.2 如发生下列任何一种情形，“麋鹿旅行”有权变更、中断或终止向用户提供的免费服务或收费服务，而无需对用户或任何第三方承担任何责任：
    \n(1) 根据法律规定用户应提交真实信息，而用户提供的个人资料不真实或与注册时信息不一致又未能提供合理证明；
    \n(2) 用户违反相关法律法规或本协议的约定；
    \n(3) 按照法律规定或有权机关的要求；
    \n(4) 出于安全的原因或其他必要的情形。
    \n十三、其他
    \n13.1 “麋鹿旅行”郑重提醒用户注意本协议中免除“麋鹿旅行”责任和限制用户权利的条款，请用户仔细阅读、自主考虑风险。未成年人应在法定监护人的陪同下阅读本协议。
    \n13.2 本协议的效力、解释及纠纷的解决，适用于中华人民共和国法律。若用户和“麋鹿旅行”之间发生任何纠纷或争议，首先应友好协商解决；协商不成的，用户同意将纠纷或争议提交“麋鹿旅行”住所地有管辖权的人民法院管辖。
    \n13.3 本协议的任何条款无论因何种原因无效或不具可执行性，其余条款仍有效，对双方具有约束力。
    </string>
    <string name="modify_password">修改密码</string>
    <string name="clear_cache">清理缓存</string>
    <string name="about_us">关于我们</string>
    <string name="user_agreement">用户协议</string>
    <string name="new_version">版本更新</string>
    <string name="user_feekback">用户反馈</string>
    <string name="help_center">帮助中心</string>
</resources>
